colors contrast fixed

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -14,7 +14,7 @@ h1,
 h2,
 h3 {
   font-family: var(--heading-font);
-  color: var(--secondary-color);
+  color: var(--primary-color);
 }
 
 p {
@@ -41,8 +41,8 @@ body {
   width: 100%;
   top: 0;
   text-align: center;
-  color: rgba(248, 245, 245, 0.774);
-  background-color: rgba(63, 182, 16, 0.295);
+  color: var(--primary-color);
+  background-color: rgba(255, 255, 255, 0.671);
 }
 
 .hero article img {
@@ -144,7 +144,7 @@ pic{
   width: 100%;
 }
 figcaption {
-    color:var(--secondary-color);
+    color:var(--primary-color);
     font-family: var(--paragraph-font);
     text-align: center;
 }
